Fix header search and login buttons on mobile

--- a/resources/sass/freyja/header.scss
+++ b/resources/sass/freyja/header.scss
@@ -95,6 +95,10 @@
     .navigation-drawer {
         width: 380px;
     }
+
+    .toggle-and-search .w-sidebar {
+        width: 380px;
+    }
 }
 
 .indicator {
